--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -1066,6 +1066,13 @@
             name="Extended Arithmetic Instruction (-mEA)"
             valueType="boolean">
       </option>
+      <option
+            applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+            command="-mmul32x16"
+            id="org.eclipse.cdt.cross.arc.gnu.base.option.target.mul3216"
+            name="DSP 32x16 MPY (-mmul32x16)"
+            valueType="boolean">
+      </option>
 
       </tool>
       <builder
@@ -5557,10 +5564,17 @@
          </option>
          <option
                applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
-               category="org.eclipse.cdt.cross.arc.gnu.windows.category.ea"
+               category="org.eclipse.cdt.cross.arc.gnu.windows.category.target"
                id="org.eclipse.cdt.cross.arc.gnu.700.windows.option.target.ea"
                name="Extended Arithmetic Instruction (-mEA)"
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.ea">
+         </option>
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.windows.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.700.windows.option.target.mul3216"
+               name="DSP 32x16 MPY (-mmul32x16)"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.mul3216">
          </option>
        
       </toolChain>
@@ -5978,6 +5992,13 @@
                id="org.eclipse.cdt.cross.arc.gnu.600.windows.option.target.ea"
                name="Extended Arithmetic Instruction (-mEA)"
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.ea">
+         </option>
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.windows.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.600.windows.option.target.mul3216"
+               name="DSP 32x16 MPY (-mmul32x16)"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.mul3216">
          </option>
         
       </toolChain>
@@ -6877,6 +6898,13 @@
                name="Extended Arithmetic Instruction (-mEA)"
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.ea">
          </option>
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.eb.windows.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.600.eb.windows.option.target.mul3216"
+               name="DSP 32x16 MPY (-mmul32x16)"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.mul3216">
+         </option>
         
       </toolChain>
       <configuration
@@ -7316,6 +7344,13 @@
                id="org.eclipse.cdt.cross.arc.gnu.700.eb.windows.option.target.ea"
                name="Extended Arithmetic Instruction (-mEA)"
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.ea">
+         </option>
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.eb.windows.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.700.eb.windows.option.target.mul3216"
+               name="DSP 32x16 MPY (-mmul32x16)"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.mul3216">
          </option>
 
       </toolChain>
@@ -8131,6 +8166,13 @@
                name="Extended Arithmetic Instruction (-mEA)"
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.ea">
          </option>
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.linux.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.600.linux.option.target.mul3216"
+               name="DSP 32x16 MPY (-mmul32x16)"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.mul3216">
+         </option>
       </toolChain>
       <projectType
             buildArtefactType="org.eclipse.cdt.cross.arc.gnu.buildArtefactType.application"
@@ -8670,6 +8712,13 @@
                id="org.eclipse.cdt.cross.arc.gnu.700.linux.option.target.ea"
                name="Extended Arithmetic Instruction (-mEA)"
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.ea">
+         </option>
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.linux.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.700.linux.option.target.mul3216"
+               name="DSP 32x16 MPY (-mmul32x16)"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.mul3216">
          </option>
       </toolChain>
       
